--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ hs_err_pid*
 /bisection/dist/
 /secant/nbproject/private/
 /secant/build/
+/false-position/nbproject/private/
+/false-position/build/
